change helpers to Focus instead of ADHD references

--- a/extension/_locales/en/messages.json
+++ b/extension/_locales/en/messages.json
@@ -3,6 +3,6 @@
 		"message": "DocsFocus"
 	},
 	"appDescription": {
-		"message": "DocsFocus helps developers skim documentation faster with ADHD-friendly focus tools."
+		"message": "DocsFocus helps developers skim documentation faster with focus-friendly tools."
 	}
 }
